--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.34",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
@@ -25,13 +26,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-smartconfig": "^0.2.2",
     "react-native-web": "~0.19.6",
+    "react-native-wifi-reborn": "^4.13.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/axios": "^0.14.0"
   },
   "private": true
 }
