--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "react-scripts build"
   },
   "dependencies": {
+    "@expo/image-utils": "^0.5.1",
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -16,12 +18,15 @@
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "axios": "^1.7.7",
-    "expo": "~51.0.34",
+    "body-parser": "^1.20.3",
+    "cookie": "^1.0.1",
+    "expo": "^51.0.38",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "qs": "^6.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -31,7 +36,9 @@
     "react-native-smartconfig": "^0.2.2",
     "react-native-web": "~0.19.10",
     "react-native-wifi-reborn": "^4.13.0",
-    "typescript": "~5.3.3"
+    "semver": "^7.6.3",
+    "typescript": "~5.3.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
