--- a/package.json
+++ b/package.json
@@ -1,14 +1,6 @@
 {
   "name": "blinkster",
   "version": "1.0.0",
-  "main": "expo-router/entry",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build": "react-scripts build"
-  },
   "dependencies": {
     "@expo/image-utils": "^0.5.1",
     "@expo/vector-icons": "^14.0.3",
@@ -21,9 +13,10 @@
     "body-parser": "^1.20.3",
     "cookie": "^1.0.1",
     "expo": "^51.0.38",
-    "expo-constants": "~16.0.2",
+    "expo-constants": "^16.0.2",
+    "expo-dev-client": "^4.0.28",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.1.0",
+    "expo-router": "^3.1.1",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "glob": "^9.3.5",
@@ -38,13 +31,16 @@
     "react-native-web": "~0.19.10",
     "react-native-wifi-reborn": "^4.13.0",
     "semver": "^7.6.3",
-    "send": "^1.1.0",
+    "send": "^0.19.0",
     "typescript": "~5.3.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/axios": "^0.14.0"
+    "@babel/core": "^7.20.0",
+    "@expo/cli": "^0.1.7"
   },
-  "private": true
+  "scripts": {
+    "android": "expo run:android",
+    "ios": "expo run:ios"
+  }
 }
